--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "seed": "node seeds/index.js",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "seed": "node seeds/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
-    "express": "^4.18.2",
+    "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "mysql2": "^2.2.5",
+    "@opentok/client": "^2.24.6",
+    "@vonage/ml-transformers": "^4.3.4",
     "sequelize": "^6.33.0"
   }
 }
